--- a/configuration/partials/page-title.hbs
+++ b/configuration/partials/page-title.hbs
@@ -1,18 +1,18 @@
 {{#*inline "route_title" ~}}
 {{~#if @root.data.isAdmin ~}}
 {{~#if @root.route.metaData.title ~}}
-{{@root.route.metaData.adminTitle}} – Saltire Awards
+{{@root.route.metaData.adminTitle}}{{#compare location "head"}} – Saltire Awards{{/compare}}
 {{else}}
-Saltire Awards – recognising young volunteers in Scotland
+{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare}}
 {{~/if~}}
 {{else}}
 {{~#compare @root.route.metaData.title "Home" ~}}
-Saltire Awards – recognising young volunteers in Scotland
+{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare}}
 {{else}}
 {{~#if @root.route.metaData.title ~}}
-{{@root.route.metaData.title}} – Saltire Awards
+{{@root.route.metaData.title}}{{#compare location "head"}} – Saltire Awards{{/compare}}
 {{else}}
-Saltire Awards – recognising young volunteers in Scotland
+{{#compare location "head"}}Saltire Awards – celebrating youth volunteering in Scotland{{else}}Celebrating youth volunteering in Scotland{{/compare}}
 {{~/if~}}
 {{~/compare ~}}
 {{~/if ~}}
@@ -20,7 +20,7 @@ Saltire Awards – recognising young volunteers in Scotland
 {{~#if @root.data.primaryResponse.hits.hits.[0] ~}}
 {{~#with @root.data.primaryResponse.hits.hits.[0]._source ~}}
 {{~#if title ~}}
-{{{title}}} – Saltire Awards
+{{{title}}}{{#compare ../location "head"}} – Saltire Awards{{/compare}}
 {{else}}
 {{> route_title}}
 {{~/if ~}}
