--- a/configuration/partials/volunteering/search-form.hbs
+++ b/configuration/partials/volunteering/search-form.hbs
@@ -1,5 +1,5 @@
 <div class="search-form">
-  <h1>Find opportunities</h1>
+  <!-- <h1>Find opportunities</h1> -->
   <form id="search-view" class="search-form" action="{{@root.request.url.pathname}}" method="GET">
     <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}" id="location-lat" />
     <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}" id="location-lng" />
