--- a/configuration/templates/account/auth/reset-password.hbs
+++ b/configuration/templates/account/auth/reset-password.hbs
@@ -1,7 +1,7 @@
 <form id="reset-password-form" method="POST" class="container form authentication-form">
-  <h1 class="x-padding">
+  <!-- <h2 class="x-padding">
     Reset password
-  </h1>
+  </h2> -->
   <p class="l-margin r-margin">
     Enter your email address to be sent a password reset link
   </p>
