--- a/configuration/templates/account/auth/sign-up.hbs
+++ b/configuration/templates/account/auth/sign-up.hbs
@@ -1,7 +1,7 @@
 <form id="sign-up-form" method="POST" class="container form authentication-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
-  <h1 class="x-padding">
+  <!-- <h2 class="x-padding">
     Sign up
-  </h1>
+  </h2> -->
   <div class="l-margin r-margin">
     <div class="bg-error s-rounded x-padding v-margin" id="sign-up-message">
       <span id="form-message"></span>
