--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -2,9 +2,9 @@
   <div class="header-image-overlay">
     <div class="container">
       <div class="x-padding-full">
-        <h1 class="b-margin-full b-padding">
+        <!-- <h1 class="b-margin-full b-padding">
           Celebrating youth volunteering in Scotland
-        </h1>
+        </h1> -->
         <h2 class="t-margin-full t-padding">
           Aged 12-25 and volunteer?
         </h2>
