--- a/configuration/templates/blog/blog.hbs
+++ b/configuration/templates/blog/blog.hbs
@@ -1,8 +1,8 @@
 <div class="container b-padding-full v-margin-full">
-  <h1>
+  <!-- <h1>
     Blog
-  </h1>
-  {{#each @root.data.primaryResponse.hits.hits ~}}
+  </h1> -->
+  {{#each @root.data.supplimentaryResponses.posts.hits.hits ~}}
   {{#with _source ~}}
   <div class="t-margin-full">
     <h3>
