--- a/configuration/templates/opportunity/search-head-tags.hbs
+++ b/configuration/templates/opportunity/search-head-tags.hbs
@@ -1,7 +1,7 @@
 {{#if data.primaryResponse.hits.hits.[0] ~}}
-<title>Volunteering search results – Saltire Awards</title>
-<meta property="og:title" content="Volunteering search results – Saltire Awards" data-dynamic="true">
+<title>Find opportunities – Saltire Awards</title>
+<meta property="og:title" content="Find opportunities – Saltire Awards" data-dynamic="true">
 {{else}}
-<title>Volunteering search results – Saltire Awards</title>
-<meta property="og:title" content="Volunteering search results – Saltire Awards" data-dynamic="true">
+<title>{{> page_title location="head"}}</title>
+<meta property="og:title" content="{{> page_title location="head"}}" data-dynamic="true">
 {{/if ~}}
