--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -84,7 +84,7 @@
       {{/if}}
     {{/ifAny}}
 
-      <header class="container bg-primary">
+      <header class="container bg-secondary">
         <section class="brand">
           <a href="/" class="logo"><img src="{{~>asset_url url='images/logos/saltire-awards-white.png'~}}" alt="{{@root.context.metaData.title}}" /></a>
         </section>
