--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -266,6 +266,25 @@
               {{{layoutParts.sidebar}}}
             </aside>
             <main class="column col-10 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
+              {{!--<button class="btn" data-component="TasksTrigger" data-TasksTrigger='{
+                click: {
+                  tasks: [
+                    {
+                      name: "toast",
+                      type: "basic",
+                      config: {
+                        message: "I am toast",
+                        class: "primary",
+                        delay: 10000
+                      }
+                    },
+                    "toast"
+                  ]
+                }
+              }'>Click me</button>--}}
+
+
+
               {{{layoutParts.body}}}
             </main>
           </div>
@@ -275,6 +294,8 @@
           </main>
         {{/if ~}}
       </div>
+
+      <div id="toaster"></div>
 
       <footer class="footer">
         <div class="footer-main">
