--- a/configuration/templates/account/auth/reset-password.hbs
+++ b/configuration/templates/account/auth/reset-password.hbs
@@ -13,7 +13,7 @@
   <div class="x-padding">
     <div id="form-section-email">
       <div class="form-group has-icon-left">
-        <input class="form-input" type="email" id="reset-password-email" placeholder="Email" required />
+        <input class="form-input" type="email" id="reset-password-email" placeholder="Your email address" required />
         <span class="form-icon far fa-at"></span>
       </div>
     </div>
