--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -298,6 +298,9 @@
       <div id="toaster"></div>
 
       <footer class="footer">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="top">
+          <polygon fill="#591669" points="0,100 100,100 0,0" />
+        </svg>
         <div class="footer-main">
           <div class="container">
             <div class="columns">
@@ -406,6 +409,12 @@
               </div>
             </div>
           </div>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="mid">
+            <polygon fill="#EA7D00" points="0,100 100,0 100,100" />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="bottom">
+            <polygon fill="white" points="0,100 100,0 100,100" />
+          </svg>
         </div>
         <div class="footer-copyright">
           <div class="container">
