--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -174,6 +174,9 @@
             {{> page_title location="body"}}
           </h1>
         </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="bottom">
+          <polygon fill="white" points="0,100 100,0 100,100" />
+        </svg>
       </header>
 
       <div class="mobile-menu mobile-menu_closed">
