subtle footer styling

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -416,7 +416,7 @@
             <polygon fill="#EA7D00" points="0,100 100,0 100,100" />
           </svg>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="bottom">
-            <polygon fill="white" points="0,100 100,0 100,100" />
+            <polygon fill="#e7eaec" points="0,100 100,0 100,100" />
           </svg>
         </div>
         <div class="footer-copyright">
