--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -1,4 +1,4 @@
-<div class="header-image" style="background-image:url({{~>asset_url url='images/luke-porter-203637-unsplash-wide.jpg' ~}});">
+<div class="header-image t-margin" style="background-image:url({{~>asset_url url='images/luke-porter-203637-unsplash-wide.jpg' ~}});">
   <div class="header-image-overlay">
     <div class="container">
       <div class="x-padding-full">
@@ -55,7 +55,7 @@
         </p>
       </div>
     </div>
-    <div class="my-saltire columns">
+    <div class="my-saltire columns b-margin-full b-padding-full">
       <div class="column col-6 my-saltire-item align-centre">
         <a href="/sign-up" class="btn btn-primary text-centre">Sign up now</a>
       </div>
