updating hours forms

--- a/configuration/templates/account/hours.hbs
+++ b/configuration/templates/account/hours.hbs
@@ -9,7 +9,9 @@
     {{@root.route.metaData.title}}
     {{/if ~}}
   </h1>
-
+  <div class="bg-error s-rounded x-padding v-margin" id="active-form-message">
+    <span id="form-message"></span>
+  </div>
   {{#unless @root.data.isAdmin ~}}
   <h2 class="b-margin-full">
     {{sumArray (pluck @root.data.tasksInfo "hours")}} total hours added
@@ -28,7 +30,7 @@
     <h2>
       Volunteering with {{organisation_name}}
     </h2>
-    <form action="/submit-hours" method="POST">
+    <form action="/submit-hours" method="POST" data-component="TasksTrigger" data-success-message="Hours Updated" data-TasksTrigger="form-error-handler">
       <p>
         {{hours}} hours added so far
       </p>
@@ -76,7 +78,7 @@
     <strong>Description:</strong> {{task_description}}
     {{/if ~}}
 
-    <form action="/admin-submit-group-hours" method="POST" data-component="TasksTrigger" data-TasksTrigger="submit-group-hours">
+    <form action="/admin-submit-group-hours" method="POST" data-component="TasksTrigger" data-TasksTrigger="submit-group-hours" data-component="TasksTrigger" data-success-message="Hours Updated" data-TasksTrigger="form-error-handler">
       <div class="form-horizontal">
         <input type="hidden" name="task_id" value="{{task_id}}">
         <div class="form-group">
@@ -130,7 +132,7 @@
     </div>
     {{#each hours_list ~}}
     {{#ifAny claim_first_name claim_code ~}}
-    <form id="{{hours_id}}" method="POST" action="/admin-submit-individual-hours" class="inline-hours-form">
+    <form id="{{hours_id}}" method="POST" action="/admin-submit-individual-hours" class="inline-hours-form" data-component="TasksTrigger" data-success-message="Hours Updated" data-TasksTrigger="form-error-handler">
       <input type="hidden" name="task_id" value="{{task_id}}">
       <input type="hidden" name="verified" value="{{verified}}">
       <input type="hidden" name="claim_code" value="{{claim_code}}">
