--- a/configuration/templates/account/task.hbs
+++ b/configuration/templates/account/task.hbs
@@ -8,7 +8,7 @@
     Task details
   </h2>
 
-  <form id="task-details-form" class="active-form" action="/submit-task-details" method="POST" data-component="TasksTrigger" data-TasksTrigger="form-error-handler" data-target-url="/admin-submit-group-hours">
+  <form id="task-details-form" class="active-form" action="/submit-task-details" method="POST" data-component="TasksTrigger" data-success-destination="/hours" data-TasksTrigger="form-error-handler">
     <input type="hidden" name="task_type" value="{{#if admin}}Group Task{{else}}Individual Task{{/if}}">
     <div class="l-margin r-margin">
       <div class="bg-error s-rounded x-padding v-margin" id="active-form-message">
@@ -203,74 +203,6 @@
 
 </script>
 
-<script type="javascript/blocked" data-component-config="form-error-handler">
-  {
-    submit: {
-      preventDefault: true,
-      tasks: [
-        {
-          type: "elementManipulator",
-          config: { ">": { addClass: "disabled" } }
-        },
-        {
-          name: "submitRequest",
-          type: "request",
-          config: {
-            url: { __template: "\{{jquery rootElement 'data' (split 'submit-url')}}" },
-            method: "POST",
-            dataType: "json",
-            data: {
-              __template: `\{{{json value=(parse (jquery null "serialize" context=metadata.instance.element) type="querystring")}}}`,
-              __parser: "json"
-            }
-          }
-        },
-        {
-          name: "errorHandle",
-          type: "switch",
-          __doNotCompile: true,
-          config: {
-            which: { __template: "\{{#if errors.submitRequest}}error\{{else}}\{{data.submitTaskRequest.errors.[0].taskName}}\{{/if}}" },
-            branches: {
-              default: {
-                tasks: [
-                  {
-                    type: "run",
-                    config: { code: "window.location.href = '/hours'" }
-                  }
-                ]
-              },
-              error: {
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "\An error has occurred, PERFORM_DEFAULT_ACTION!" } }
-                    }
-                  }
-                ]
-              },
-              saveTaskData: {
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "Task not saved, PERFORM_DEFAULT_ACTION!" } }
-                    }
-                  }
-                ]
-              }
-            }
-          }
-        }
-      ]
-    }
-  }
-</script>
 {{!--
 --}}
 {{!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> --}}
