--- a/configuration/templates/page/test.hbs
+++ b/configuration/templates/page/test.hbs
@@ -9,10 +9,10 @@
   </div>
   <div class="x-padding">
     <div class="form-group has-icon-left">
-      <input class="form-input" id="cat-name" placeholder="Cat Name" data-lpignore="true" autocomplete="off" />
+      <input class="form-input" type="email" id="cat-name" placeholder="Cat Name" data-lpignore="true" autocomplete="off" />
     </div>
     <div class="form-group has-icon-left">
-      <input class="form-input" id="dog-name" placeholder="Dog Name" data-lpignore="true" autocomplete="off" />
+      <input class="form-input" type="password" id="dog-name" placeholder="Dog Name" data-lpignore="true" autocomplete="off" />
     </div>
     <div id="form-section-sign-up-buttons" class="t-margin">
       <button class="btn btn-primary" type="submit" id="sign-up-submit">
@@ -40,19 +40,11 @@
           type: "elementManipulator",
           config: { ">": { addClass: "disabled" } }
           },
-
           {
           name: "testRequest",
           type: "request",
-          config: {
-            url: "/test-ajax",
-            method: "POST",
-            dataType: "json",
-            data: {
-              __template: "\{{{json value=(parse (jquery null \"serialize\" context=metadata.instance.element) type=\"querystring\")}}}",
-            }
-          }
-        },
+          config: { url: "/test-ajax" }
+          },
           {
             __doNotCompile: true,
             name: "errorHandle",
@@ -63,13 +55,9 @@
             branches: {
               default: {
                 tasks: [
-                   {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "An win occurred \{{data}} "} }
-                    }
+                  {
+                    type: "run",
+                    config: { code: "window.location.href = '/test-page?win=true'" }
                   }
                 ]
               },
@@ -80,7 +68,7 @@
                     config: {
                       ">": { removeClass: "disabled" },
                       "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "An error occurred \{{json value=@root}} "} }
+                      "#form-message": { contents: { __template: "An error occurred \{{> partial}} "} }
                     }
                   }
                 ]
