re-enabling test button

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -266,7 +266,7 @@
               {{{layoutParts.sidebar}}}
             </aside>
             <main class="column col-10 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
-              {{!--<button class="btn" data-component="TasksTrigger" data-TasksTrigger='{
+              <button class="btn" data-component="TasksTrigger" data-TasksTrigger='{
                 click: {
                   tasks: [
                     {
@@ -281,7 +281,7 @@
                     "toast"
                   ]
                 }
-              }'>Click me</button>--}}
+              }'>Click me</button>
 
 
 
