--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -277,8 +277,7 @@
                       type: "basic",
                       config: {
                         message: "I am toast",
-                        class: "primary",
-                        delay: 10000
+                        class: "primary"
                       }
                     },
                     "toast"
