--- a/src/main.scss
+++ b/src/main.scss
@@ -148,13 +148,30 @@ a.btn-secondary:visited,
   margin-left: -150px;
 
   .toast {
-    animation: toast-in 0.5s forwards;
     position: relative;
-    margin-top: $unit/2;
+    margin-top: $unit/4;
+  }
+
+  .toast-in {
+    animation: toast-in 0.4s ease-in,
+               toast-out 0.4s ease-in 5.4s;
+    animation-fill-mode: forwards;
+  }
+
+  .toast-hovered {
+    animation: 0, 0;
+    top: 0;
+    opacity: 1;
   }
 
   .toast-out {
-    animation: toast-out 0.5s forwards 5.5s;
+    animation: toast-out 0.4s ease-in 5s;
+    animation-fill-mode: forwards;
+  }
+
+  .toast-closed {
+    animation: toast-out 0.4s ease-in;
+    animation-fill-mode: forwards;
   }
 
   @keyframes toast-in {
@@ -167,7 +184,21 @@ a.btn-secondary:visited,
       opacity: 1;
     }
   }
-  @keyframes toast-out { 0% { opacity: 1; } 100% { opacity: 0; } }
+  @keyframes toast-out {
+    0% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    99% {
+      opacity: 0;
+      transform: translateX(60vh);
+    }
+    100% {
+      opacity: 0;
+      transform: translateX(9999px);
+      pointer-events: none;
+    }
+  }
 }
 
 @media screen and (min-width: 961px) {
