--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -9,8 +9,10 @@
     {{@root.route.metaData.title}}
     {{/if ~}}
   </h1>
+  <div class="l-margin r-margin">
   <div class="bg-error s-rounded x-padding v-margin" id="active-form-message">
     <span id="form-message"></span>
+  </div>
   </div>
   {{#unless @root.data.isAdmin ~}}
   <h2 class="b-margin-full">
@@ -20,8 +22,6 @@
 
   {{> log_action_buttons}}
 
-  <div class="bg-error s-rounded x-padding v-margin" id="active-form-message">
-  <span id="form-message"></span>
 </div>
   {{#unless @root.data.isAdmin ~}}
   <div id="individual-tasks-input">
@@ -30,7 +30,7 @@
     <h2>
       Volunteering with {{organisation_name}}
     </h2>
-    <form action="/submit-hours" method="POST" data-component="TasksTrigger" data-success-message="Hours Updated" data-TasksTrigger="form-error-handler">
+    <form action="/submit-hours" method="POST" data-component="TasksTrigger" data-success-destination="/hours" data-TasksTrigger="form-error-handler">
       <p>
         {{hours}} hours added so far
       </p>
@@ -78,7 +78,7 @@
     <strong>Description:</strong> {{task_description}}
     {{/if ~}}
 
-    <form action="/admin-submit-group-hours" method="POST" data-component="TasksTrigger" data-TasksTrigger="submit-group-hours" data-component="TasksTrigger" data-success-message="Hours Updated" data-TasksTrigger="form-error-handler">
+    <form action="/admin-submit-group-hours" method="POST" data-component="TasksTrigger" data-success-destination="/hours" data-TasksTrigger="form-error-handler">
       <div class="form-horizontal">
         <input type="hidden" name="task_id" value="{{task_id}}">
         <div class="form-group">
@@ -132,7 +132,7 @@
     </div>
     {{#each hours_list ~}}
     {{#ifAny claim_first_name claim_code ~}}
-    <form id="{{hours_id}}" method="POST" action="/admin-submit-individual-hours" class="inline-hours-form" data-component="TasksTrigger" data-success-message="Hours Updated" data-TasksTrigger="form-error-handler">
+    <form id="{{hours_id}}" method="POST" action="/admin-update-individual-hours" class="inline-hours-form" data-component="TasksTrigger" data-success-message="Hours Updated" data-TasksTrigger="form-error-handler" >
       <input type="hidden" name="task_id" value="{{task_id}}">
       <input type="hidden" name="verified" value="{{verified}}">
       <input type="hidden" name="claim_code" value="{{claim_code}}">
@@ -221,147 +221,7 @@ function preSubmit() {
   if (isValid) {
     onSubmit();
   }
+}
 
 </script>
 
-<script type="javascript/blocked" data-component-config="submit-group-hours">
-  {
-    submit: {
-      preventDefault: true,
-      tasks: [
-        {
-          type: "elementManipulator",
-          config: { ">": { addClass: "disabled" } }
-        },
-        {
-          name: "submitHoursRequest",
-          type: "request",
-          config: {
-            url: "/admin-submit-group-hours",
-            method: "POST",
-            dataType: "json",
-            data: {
-              __template: `\{{{json value=(parse (jquery null "serialize" context=metadata.instance.element) type="querystring")}}}`,
-              __parser: "json"
-            }
-          }
-        },
-        {
-          name: "errorHandle",
-          type: "switch",
-          __doNotCompile: true,
-          config: {
-            which: { __template: "\{{#if errors.submitHoursRequest}}error\{{else}}\{{data.submitHoursRequest.errors.[0].taskName}}\{{/if}}" },
-            branches: {
-              default: {
-                tasks: [
-                  {
-                    type: "run",
-                    config: { code: "window.location.href = '/hours'" }
-                  }
-                ]
-              },
-              error: {
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "\An error has occurred, PERFORM_DEFAULT_ACTION!" } }
-                    }
-                  }
-                ]
-              },
-              saveHoursData: {
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "Hours not saved, PERFORM_DEFAULT_ACTION!" } }
-                    }
-                  }
-                ]
-              }
-            }
-          }
-        }
-      ]
-    }
-  }
-</script>
-
-<script type="javascript/blocked" data-component-config="update-individual-hours">
-  {
-    submit: {
-      preventDefault: true,
-      tasks: [
-        {
-          type: "elementManipulator",
-          config: { ">": { addClass: "disabled" } }
-        },
-        {
-          name: "submitHoursRequest",
-          type: "request",
-          config: {
-            url: "/admin-update-individual-hours",
-            method: "POST",
-            dataType: "json",
-            data: {
-              __template: `\{{{json value=(parse (jquery null "serialize" context=metadata.instance.element) type="querystring")}}}`,
-              __parser: "json"
-            }
-          }
-        },
-        {
-          name: "errorHandle",
-          type: "switch",
-          __doNotCompile: true,
-          config: {
-            which: { __template: "\{{#if errors.submitHoursRequest}}error\{{else}}\{{data.submitHoursRequest.errors.[0].taskName}}\{{/if}}" },
-            branches: {
-              default: {
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "\ Record updated" } }
-                    }
-                  }
-                ]
-              },
-              error: {
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "\An error has occurred, PERFORM_DEFAULT_ACTION!" } }
-                    }
-                  }
-                ]
-              },
-              saveHoursData: {
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      ">": { removeClass: "disabled" },
-                      "#active-form-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "Hours not saved, PERFORM_DEFAULT_ACTION!" } }
-                    }
-                  }
-                ]
-              }
-            }
-          }
-        }
-      ]
-    }
-  }
-</script>
