more work on the error handler

--- a/configuration/frontend/partials/contact-support.hbs
+++ b/configuration/frontend/partials/contact-support.hbs
@@ -1,1 +1,1 @@
-if this happense again, please <a href="mailto:{{@root.data.accountInfo.support_email_address}}">contact us</a>.
+if this happens again, please <a href="/contact">contact us</a>.
